--- a/src/pages/Editor/Editor.scss
+++ b/src/pages/Editor/Editor.scss
@@ -1,5 +1,5 @@
 .CodeMirror {
-  min-height: 100vh;
+  min-height: calc(100vh - 88px);
   font-size: 20px;
   line-height: 1.6;
   padding-top: 20px;
